<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Data usage monitor</string>
    <string name="prompt_dialog_msg">Data usage monitor needs to Send SMS, Receive SMS and Read SMS permissions to provide basic services.\nThe app needs the network to obtain the necessary data. Check with your local carrier to find out exact rates for data usage.\nThe app doesn\'t support eSIM or SIM cards of virtual carriers.\nDuring use, the app gathers and uses the below information for basic functions of Data usage monitor:\nTo gather IMEI and IMSI codes, the app needs "Read phone status and identity" permission. \nData usage correction service of the app is provided by Shenzhen Tencent Computer System Co., Ltd. In order to implement basic functions of the service, the provider needs to gather and use the below information:\nGather and use IMEI and IMSI via Data usage monitor for daily activated users Statistics and data usage correction. For more information, please read the Tencent privacy policy.</string>
    <string name="prompt_dialog_cancel">Cancel</string>
    <string name="prompt_dialog_ok">Agree</string>
    <string name="prompt_dialog_title">Terms of service</string>
    <string name="network_tips_privacy">Tap Agree if you agree to the above terms of service, the HTC End User License Agreement and Disclaimer for products with Navigation Function and the HTC privacy policy</string>
    <string name="footer_tip_msg">Powered by Tencent</string>
    <string name="network_control">Network control</string>
    <string name="used_data_near_day">Recent data usage</string>
    <string name="used_data_today">Today</string>
    <string name="used_data_yesterday">Yesterday</string>
    <string name="used_data_before_yesterday">The day before yesterday</string>
    <string name="data_used_1">Used</string>
    <string name="data_residue_1">Remaining</string>
    <string name="data_common_used">General</string>
    <string name="night_data_title">Night idle</string>
    <string name="data_usage_null">Limit reached</string>
    <string name="data_over_1">Over limit</string>
    <string name="no_settings">Not set</string>
    <string name="correction_wizard">Correction wizard</string>
    <string name="data_package_monthly">Monthly data usage limit (MB)</string>
    <string name="data_start_date">Usage reset date</string>
    <string name="data_package_night">Night idle</string>
    <string name="data_for_night">Night idle limit (MB)</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="next_step">Next</string>
    <string name="set_Provinces_City">Province and city</string>
    <string name="set_carry">Carrier</string>
    <string name="city_carry_summary">Enable accurate data usage correction after right configuration. (Need send free text message to carrier)</string>
    <string name="back_step">Prev</string>
    <string name="save">Finish</string>
    <string name="data_monitor_settings">Data usage settings</string>
    <string name="switch_data_monitor_setting">Real-time data usage monitoring</string>
    <string name="switch_data_monitor_turnon">ON</string>
    <string name="switch_data_monitor_turnoff">OFF</string>
    <string name="data_monitor_on_summary">Real-time monitoring is running</string>
    <string name="data_monitor_off_summary">Real-time monitoring has stopped</string>
    <string name="switch_data_float_setting">Floating network speed</string>
    <string name="sim_frist_name">SIM card 1</string>
    <string name="sim_sec_name">SIM card 2</string>
    <string name="sim_main_name">SIM card 1（%1$s）</string>
    <string name="sim_sub_name">SIM card 2（%1$s）</string>
    <string name="sim_name">SIM card</string>
    <string name="switch_data_correct_title">Daily automatic correction</string>
    <string name="switch_data_correct_msg">Correction via text message or network</string>
    <string name="used_data_change_title">Modify monthly data usage</string>
    <string name="used_reminder_title">Data usage reminder</string>
    <string name="data_package">Data usage limit</string>
    <string name="data_package_setting_msg">Set data usage limit and reset date</string>
    <string name="set_city_operator">Province, city and carrier</string>
    <string name="used_data_summary">If you know current monthly data usage, please input:</string>
    <string name="used_package_data">Used for general data (MB)</string>
    <string name="used_idle_data">Used for night idle data (MB)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="used_reminder">Remind when above monthly data usage</string>
    <string name="used_reminder_turnoff">Disable mobile data when exceed monthly data usage limit</string>
    <string name="used_reminder_message">Once %1$s monthly data is reached, mobile data is disabled automatically. If you want to continue to use mobile data, you can enable it manually.</string>
    <string name="monthly_used_reminder_message">%1$s monthly data has been reached. If you don\'t want to continue to use mobile data, you can disable it.</string>
    <string name="turn_off_mobile_data">Disable mobile data</string>
    <string name="monthly_remaining_reminder">Remind when below monthly remaining preset</string>
    <string name="set_monthly_remaining_reminder">Please input monthly remaining preset (MB)</string>
    <string name="monthly_remaining_reminder_message">%1$s monthly data remains %2$s. If you don\'t want to continue to use mobile data, you can disable it.</string>
    <string name="daily_used_reminder">Remind when above daily use preset</string>
    <string name="set_daily_used_reminder">Please input daily use preset (MB)</string>
    <string name="daily_used_reminder_message">Today %1$s %2$s data  used. If you don\'t want to continue to use mobile data, you can disable it.</string>
    <string name="sim_change_summary">Found SIM card change, please correct it.</string>
    <string name="notification_esim_title">More favorable data usage</string>
    <string name="notification_esim_msg">Tap to learn more</string>
    <string name="esim_toast_msg">The SIM card doesn\'t support data usage correction</string>
    <string name="data_correct_frequent_operation">Frequent operation, please wait for a moment.</string>
    <string name="data_correct_success">Corrected successfully</string>
    <string name="data_correct_error">Failed to correct</string>
    <string name="dialog_load_sdk_failed_title">Tencent SDK</string>
    <string name="dialog_load_sdk_failed_msg">Failed to initialize Tencent SDK, perhaps failed to load so library!</string>
    <string name="permission_toast_msg">Correction needs %1$s permissions, please change it in Permission Manager</string>
    <string name="toast_msg">Send SMS、Receive SMS and Read SMS</string>
    <string name="no_sim_operator">No sim card detected</string>
    <string name="download_link">http://www.caihcom.com/m/htcdownload</string>
    <string name="tencent_privacy">Tencent privacy policy</string>
    <string name="privacy_url">https://www.htc.com/us/terms/privacy/?text</string>
    <string name="tenprivacy_url">http://www.qq.com/privacy.htm</string>
    <string name="click_disclaimer">HTC End User License Agreement and Disclaimer for products with Navigation Function</string>
    <string name="click_htc_privacy">HTC privacy policy</string>
    <string name="start_data_correct">Correcting...</string>
</resources>