<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_Provinces_City"
            android:textSize="@dimen/Text_size"
            android:textColor="@color/light_main_text_color"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m2"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/Province"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_selector"
                android:textColor="@color/light_main_text_color"
                android:textSize="@dimen/listview_text_2"
                android:stateListAnimator="@null"
                />
            <Button
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_selector"
                android:textColor="@color/light_main_text_color"
                android:textSize="@dimen/listview_text_2"
                android:stateListAnimator="@null"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/set_carry"
            android:textSize="@dimen/Text_size"
            android:textColor="@color/light_main_text_color"/>

        <Button
            android:id="@+id/carry"
            android:layout_marginTop="@dimen/margin_m2"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/button_selector"
            android:textColor="@color/light_main_text_color"
            android:textSize="@dimen/listview_text_2"
            android:gravity="center"
            android:stateListAnimator="@null"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/light_main_text_color"
            android:text="@string/city_carry_summary" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Portraint_Fixed_Height_of_Footers"
            android:layout_gravity="bottom"
            android:background="@drawable/common_app_bkg_down_light_src"
            android:paddingTop="@dimen/margin_m2"
            android:paddingBottom="@dimen/margin_m2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back_step"
                android:gravity="center"
                style="@style/footerPrmiary_m"
                android:layout_gravity="bottom"/>
            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:foreground="@drawable/common_div_footer"/>

            <TextView
                android:id="@+id/wizard_complete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/footerPrmiary_m"
                android:text="@string/save" />
        </LinearLayout>

        <Button
            android:id="@+id/set_operator_complete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Portraint_Fixed_Height_of_Footers"
            android:background="@drawable/common_app_bkg_down_light_src"
            android:gravity="center"
            style="@style/footerPrmiary_m"
            android:layout_gravity="bottom"
            android:text="@string/save" />


    </FrameLayout>

</LinearLayout>