<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/light_main_text_color"
            android:textSize="@dimen/Text_size"
            android:text="@string/used_data_summary"
            />

        <TextView
            android:id="@+id/data_package_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/used_package_data"
            android:textColor="@color/light_main_text_color"
            android:textSize="@dimen/Text_size"/>

        <EditText
            android:id="@+id/set_package_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="6"
            android:inputType="number"
            android:textSize="@dimen/Text_size"
            android:background="@drawable/edittext_selector"
            android:backgroundTint="@color/selector_color_edittext"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_m2"
            android:textCursorDrawable="@null"
            />

        <TextView
            android:id="@+id/night_data_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/used_idle_data"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textColor="@color/light_main_text_color"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/set_night_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:maxLength="6"
            android:inputType="number"
            android:textSize="@dimen/Text_size"
            android:background="@drawable/edittext_selector"
            android:backgroundTint="@color/selector_color_edittext"
            android:layout_marginTop="@dimen/margin_m2"
            android:textCursorDrawable="@null"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
       </LinearLayout>


        <TextView
            android:id="@+id/button_complete"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/Portraint_Fixed_Height_of_Footers"
            android:background="@drawable/common_app_bkg_down_light_src"
            android:gravity="center"
            style="@style/footerPrmiary_m"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:focusable="false" />


</LinearLayout>
